--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <li>Thing2</li>
     <li>Thing3</li>
   </ul>
+  
+   <ol>
+    <li>Thing1</li>
+    <li>Thing2</li>
+    <li>Thing3</li>
+  </ol>
 
 
 </body>
