--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <body>
-  <h1>
-
-  </h1>
+  <h1> A Head of the Game</h1>
+  <p> Do you want to code <em>faster</em>,<strong>better</strong>, <em>smarter</em>?</p>
 
   <ul>
     <li>Thing1</li>
     <li>Thing2</li>
     <li>Thing3</li>
   </ul>
-  
+
    <ol>
     <li>Thing1</li>
     <li>Thing2</li>
