--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <body>
-  <h1> A Head of the Game</h1>
+  <h1> Ahead of the Game</h1>
   <p> Do you want to code <em>faster</em>,<strong>better</strong>, <em>smarter</em>?</p>
 
-  <ul>
+  <ol>
     <li>Thing1</li>
     <li>Thing2</li>
-    <li>Thing3</li>
-  </ul>
-
-   <ol>
-    <li>Thing1</li>
-    <li>Thing2</li>
+      <ul>
+        <li>ThingA</li>
+        <li>ThingB</li>
+        <li>ThingC</li>
+      </ul>
     <li>Thing3</li>
   </ol>
+
+<img src=https://media.npr.org/assets/img/2010/10/28/flyingfingers_wide-66394a3796b3a38b91f672f7ff84351dafa2f818-s800-c85.jpg />
 
 
 </body>
